--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="menuItem">
           <span onclick="loadContent('pages/icons.html')">
-            Каталог
+           Иконки
           </span>
         </div>
 
@@ -71,7 +71,7 @@
 <script id="script"></script>
 
 <script>
-loadContent('pages/icons.html');
+loadContent('pages/ui-icon.html');
 function loadContent(page){
   fetch(page)
   .then(response => response.text())
