--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,18 +1,26 @@
 <div class="title">Каталог</div>
 <ui-spacing height="20"></ui-spacing>
-<div class="description">Толщина линии до конвертации: 1.6px. Закругление угла: 3px. Размер: 20 x 20</div>
-<ui-spacing height="20"></ui-spacing>
-<section class="iconsPack">
-  <ui-icon icon="home" id="test"></ui-icon>
-  <ui-icon icon="article"></ui-icon>
-  <ui-icon icon="search"></ui-icon>
-  <ui-icon icon="send"></ui-icon>
-  <ui-icon icon="bell"></ui-icon>
-  <ui-icon icon="gear"></ui-icon>
-  <ui-icon icon="cross"></ui-icon>
-  <ui-icon icon="clear"></ui-icon>
+<div class="description">Коллекция иконок.</div>
+
+<section class="content">
+  <div class="info">
+    Толщина линии до конвертации: 1.6px. Закругление угла: 3px.
+  </div>
+
+  <div>Размер: 20 x 20</div>
+
+  <div class="icons">
+    <ui-icon icon="home" id="test"></ui-icon>
+    <ui-icon icon="article"></ui-icon>
+    <ui-icon icon="search"></ui-icon>
+    <ui-icon icon="send"></ui-icon>
+    <ui-icon icon="bell"></ui-icon>
+    <ui-icon icon="gear"></ui-icon>
+    <ui-icon icon="cross"></ui-icon>
+    <ui-icon icon="clear"></ui-icon>
+  </div>
 </section>
-<ui-spacing height="20"></ui-spacing>
+
 <ui-button onclick="changeIconName()" label="Тест реактивности"></ui-button>
 
 <script>
