--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -1,47 +1,51 @@
 <div class="title">Кнопка</div>
+<ui-spacing height="20"></ui-spacing>
+<div class="description">Кнопка запускает действие или событие при активации.</div>
 
-<div class="section">
-  <ui-button icon-before="article" size="small"></ui-button>
-  <ui-button label="Кнопка" size="small"></ui-button>
-  <code>
-    <span>&lt;ui-button label="Кнопка" size="small"&gt;&lt;/ui-button&gt;</span>
-  </code>
-  <ui-button icon-before="article" size="medium"></ui-button>
-  <ui-button label="Кнопка" size="medium"></ui-button>
-  <code>
-    <span>&lt;ui-button label="Кнопка" size="medium"&gt;&lt;/ui-button&gt;</span>
-  </code>
-  <ui-button icon-before="article" size="large"></ui-button>
-  <ui-button label="Кнопка" size="large"></ui-button>
-  <code>
-    <span>&lt;ui-button label="Кнопка" size="large"&gt;&lt;/ui-button&gt;</span>
-  </code>
-</div>
+<section class="content">
+  <div class="example">
+    <ui-button icon-before="article" size="small"></ui-button>
+    <ui-button label="Кнопка" size="small"></ui-button>
+    <code>
+      <span>&lt;ui-button label="Кнопка" size="small"&gt;&lt;/ui-button&gt;</span>
+    </code>
+    <ui-button icon-before="article" size="medium"></ui-button>
+    <ui-button label="Кнопка" size="medium"></ui-button>
+    <code>
+      <span>&lt;ui-button label="Кнопка" size="medium"&gt;&lt;/ui-button&gt;</span>
+    </code>
+    <ui-button icon-before="article" size="large"></ui-button>
+    <ui-button label="Кнопка" size="large"></ui-button>
+    <code>
+      <span>&lt;ui-button label="Кнопка" size="large"&gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
 
-<div class="section">
-  <ui-button label="Кнопка" disabled></ui-button>
-  <code>
-    <span>&lt;ui-button label="Кнопка" disabled&gt;&lt;/ui-button&gt;</span>
-  </code>
-</div>
+  <div class="example">
+    <ui-button label="Кнопка" disabled></ui-button>
+    <code>
+      <span>&lt;ui-button label="Кнопка" disabled&gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
 
-<div class="section">
-  <ui-button icon-before="article" label="Кнопка"></ui-button>
-  <code>
-    <span>&lt;ui-button icon-before="article" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
-  </code>
-</div>
+  <div class="example">
+    <ui-button icon-before="article" label="Кнопка"></ui-button>
+    <code>
+      <span>&lt;ui-button icon-before="article" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
 
-<div class="section">
-  <ui-button icon-after="send" label="Кнопка"></ui-button>
-  <code>
-    <span>&lt;ui-button icon-after="Send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
-  </code>
-</div>
+  <div class="example">
+    <ui-button icon-after="send" label="Кнопка"></ui-button>
+    <code>
+      <span>&lt;ui-button icon-after="Send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
 
-<div class="section">
-  <ui-button icon-before="article" icon-after="send" label="Кнопка"></ui-button>
-  <code>
-    <span>&lt;ui-button icon-before="article" icon-after="Send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
-  </code>
-</div>
+  <div class="example">
+    <ui-button icon-before="article" icon-after="send" label="Кнопка"></ui-button>
+    <code>
+      <span>&lt;ui-button icon-before="article" icon-after="Send" label="Кнопка"&gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
+</section>
