--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -1,13 +1,18 @@
 <div class="title">Иконка</div>
-<span>icon (атрибут) - реактивный, обязательный.</span>
-<span>Буквы (латиница) и цифры, начало с буквы. a-z A-Z 0-9</span>
-  fill - currentColor<br>
-  Цвет svg зависит от цвета шрифта указанного в родительском элементе. 
+<ui-spacing height="20"></ui-spacing>
+<div class="description">Компонент для вставки иконки.</div>
 
+<section class="content">
+  <div class="info">
+    <span>icon (атрибут) - реактивный, обязательный, буквы (латиница) и цифры, начало с буквы. a-z A-Z 0-9</span>
+    <span>fill - currentColor</span>
+    <span>Цвет svg зависит от цвета шрифта указанного в родительском элементе. </span>
+  </div>
 
-<div class="section">
-  <ui-icon icon="home"></ui-icon>
-  <code>
-    <span>&lt;ui-icon icon="home"&gt;&lt;/ui-icon&gt;</span>
-  </code>
-</div>
+  <div class="example">
+    <ui-icon icon="home"></ui-icon>
+    <code>
+      <span>&lt;ui-icon icon="home"&gt;&lt;/ui-icon&gt;</span>
+    </code>
+  </div>
+</section>
