--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -1,24 +1,27 @@
 <div class="title">Поле ввода</div>
+<ui-spacing height="20"></ui-spacing>
+<div class="description">Поле ввода позволяет пользователю вводить и редактировать текст.</div>
 
-<div class="section">
-  <code>
-    &lt;ui-input&gt;&lt;/ui-input&gt;
-  </code>
-  <ui-input></ui-input>
-</div>
+<section class="content">
+  <div class="example">
+    <ui-input></ui-input>
+    <code>
+      &lt;ui-input&gt;&lt;/ui-input&gt;
+    </code>
+  </div>
 
-<div class="section">
-  <code>
-    &lt;ui-input icon-before="Article" type="email" placeholder="Э-почта"&gt;&lt;/ui-input&gt;
-  </code>
-  <ui-input icon-before="article" type="tel" placeholder="Э-почта"></ui-input>
-</div>
+  <div class="example">
+    <ui-input icon-before="article" type="tel" placeholder="Э-почта"></ui-input>
+    <code>
+      &lt;ui-input icon-before="Article" type="email" placeholder="Э-почта"&gt;&lt;/ui-input&gt;
+    </code>
+  </div>
 
-<div class="section">
-  <code>
-  &lt;ui-input label="Заголовок" hint="Подсказка" placeholder="Пароль" before="Article" after="Bell" type="password"&gt;&lt;/ui-input&gt;
-  </code>
-
-  <ui-input id="test" label="Заголовок" hint="Подсказка" placeholder="Пароль" icon-before="article" icon-after="bell" type="password" required>
-  </ui-input>
-</div>
+  <div class="example">
+    <ui-input id="test" label="Заголовок" hint="Подсказка" placeholder="Пароль" icon-before="article" icon-after="bell" type="password" required>
+    </ui-input>
+    <code>
+    &lt;ui-input label="Заголовок" hint="Подсказка" placeholder="Пароль" before="Article" after="Bell" type="password"&gt;&lt;/ui-input&gt;
+    </code>
+  </div>
+</section>
