--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,4 +1,4 @@
-<div class="title">Каталог</div>
+<div class="title">Иконки</div>
 <ui-spacing height="20"></ui-spacing>
 <div class="description">Коллекция иконок.</div>
 
@@ -7,7 +7,7 @@
     Толщина линии до конвертации: 1.6px. Закругление угла: 3px.
   </div>
 
-  <div>Размер: 20 x 20</div>
+  <span>Размер: 20 x 20</span>
 
   <div class="icons">
     <ui-icon icon="home" id="test"></ui-icon>
