--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <script id="script"></script>
 
 <script>
-loadContent('pages/ui-icon.html');
+loadContent('pages/ui-divider.html');
 function loadContent(page){
   fetch(page)
   .then(response => response.text())
