--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -9,11 +9,17 @@
     <code>
       <span>&lt;ui-button label="Кнопка" size="small"&gt;&lt;/ui-button&gt;</span>
     </code>
+  </div>
+
+  <div class="example">
     <ui-button icon-before="article" size="medium"></ui-button>
     <ui-button label="Кнопка" size="medium"></ui-button>
     <code>
       <span>&lt;ui-button label="Кнопка" size="medium"&gt;&lt;/ui-button&gt;</span>
     </code>
+  </div>
+
+  <div class="example">
     <ui-button icon-before="article" size="large"></ui-button>
     <ui-button label="Кнопка" size="large"></ui-button>
     <code>
