--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -1,10 +1,16 @@
 <div class="title">Разделитель</div>
-<ui-spacing height="20"></ui-spacing>
+<ui-divider height="20"></ui-divider>
 <div class="description">Визуальное отделение блоков контента.</div>
+<ui-divider height="60" type="wrong"></ui-divider>
 
 <section class="content">
-  <span>Просто линия</span>
+  <span>Простая линия</span>
   <div class="example">
     <ui-divider></ui-divider>
+  </div>
+
+  <span>Линия с текстом</span>
+  <div class="example">
+    <ui-divider label="Текст"></ui-divider>
   </div>
 </section>
