--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,6 +1,7 @@
 <div class="title">Иконки</div>
-<ui-spacing height="20"></ui-spacing>
+<ui-divider height="30"></ui-divider>
 <div class="description">Коллекция иконок.</div>
+<ui-divider height="60" type="line"></ui-divider>
 
 <section class="content">
   <div class="info">
