--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -1,6 +1,7 @@
 <div class="title">Иконка</div>
-<ui-spacing height="20"></ui-spacing>
+<ui-divider height="30"></ui-divider>
 <div class="description">Компонент для вставки иконки.</div>
+<ui-divider height="60" type="line"></ui-divider>
 
 <section class="content">
   <div class="info">
