--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -1,7 +1,7 @@
-<div class="title">Иконка</div>
-<ui-divider height="30"></ui-divider>
-<div class="description">Компонент для вставки иконки.</div>
-<ui-divider height="60" type="line"></ui-divider>
+<section class="intro">
+  <span class="title">Иконка</span>
+  <span class="description">Компонент для вставки иконки.</span>
+</section>
 
 <section class="content">
   <div class="info">
