--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -1,15 +1,14 @@
 <section class="intro">
   <span class="title">Иконка</span>
   <span class="description">Компонент для вставки иконки.</span>
+  <div class="info">
+    <span>icon - реактивный и обязательный атрибут, может содержать буквы (латиница a-z A-Z) и цифры (0-9), начало с букв.</span>
+    <span>fill - currentColor, цвет svg зависит от цвета шрифта указанного в родительском элементе. </span>
+  </div>
 </section>
 
 <section class="content">
-  <div class="info">
-    <span>icon (атрибут) - реактивный, обязательный, буквы (латиница) и цифры, начало с буквы. a-z A-Z 0-9</span>
-    <span>fill - currentColor</span>
-    <span>Цвет svg зависит от цвета шрифта указанного в родительском элементе. </span>
-  </div>
-
+  <span>Иконка.</span>
   <div class="example">
     <ui-icon icon="home"></ui-icon>
     <code>
