--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -1,32 +1,49 @@
-<div class="title">Кнопка</div>
-<ui-spacing height="20"></ui-spacing>
-<div class="description">Кнопка запускает действие или событие при активации.</div>
+<section class="intro">
+  <span class="title">Кнопка</span>
+  <span class="description">Кнопка запускает действие или событие при активации.</span>
+  <div class="info">
+    <span>label - реактивный и не обязательный атрибут.</span>
+
+  </div>
+</section>
 
 <section class="content">
+  <span>Кнопки разного размера.</span>
   <div class="example">
-    <ui-button icon-before="article" size="small"></ui-button>
     <ui-button label="Кнопка" size="small"></ui-button>
     <code>
       <span>&lt;ui-button label="Кнопка" size="small"&gt;&lt;/ui-button&gt;</span>
     </code>
-  </div>
 
-  <div class="example">
-    <ui-button icon-before="article" size="medium"></ui-button>
     <ui-button label="Кнопка" size="medium"></ui-button>
     <code>
       <span>&lt;ui-button label="Кнопка" size="medium"&gt;&lt;/ui-button&gt;</span>
     </code>
-  </div>
 
-  <div class="example">
-    <ui-button icon-before="article" size="large"></ui-button>
     <ui-button label="Кнопка" size="large"></ui-button>
     <code>
       <span>&lt;ui-button label="Кнопка" size="large"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
+  <div class="example">
+    <ui-button icon-before="article" size="small"></ui-button>
+    <code>
+      <span>&lt;ui-button icon-before="article" size="small"&gt;&lt;/ui-button&gt;</span>
+    </code>
+
+    <ui-button icon-before="article" size="medium"></ui-button>
+    <code>
+      <span>&lt;ui-button icon-before="article" size="medium"&gt;&lt;/ui-button&gt;</span>
+    </code>
+
+    <ui-button icon-before="article" size="large"></ui-button>
+    <code>
+      <span>&lt;ui-button icon-before="article" size="large"&gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
+
+  <span>Неактивная кнопка.</span>
   <div class="example">
     <ui-button label="Кнопка" disabled></ui-button>
     <code>
