--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -10,36 +10,37 @@
 <section class="content">
   <span>Кнопки разного размера.</span>
   <div class="example">
-    <ui-button label="Кнопка" size="small"></ui-button>
+    <ui-button label="Кнопка" height="20"></ui-button>
     <code>
-      <span>&lt;ui-button label="Кнопка" size="small"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
 
-    <ui-button label="Кнопка" size="medium"></ui-button>
+    <ui-button label="Кнопка" height="30"></ui-button>
     <code>
-      <span>&lt;ui-button label="Кнопка" size="medium"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
 
-    <ui-button label="Кнопка" size="large"></ui-button>
+    <ui-button label="Кнопка"></ui-button>
     <code>
-      <span>&lt;ui-button label="Кнопка" size="large"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="Кнопка"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
+  <span>Кнопки разного размера.</span>
   <div class="example">
-    <ui-button icon-before="article" size="small"></ui-button>
+    <ui-button icon-before="article" height="20"></ui-button>
     <code>
-      <span>&lt;ui-button icon-before="article" size="small"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-before="article"&gt;&lt;/ui-button&gt;</span>
     </code>
 
-    <ui-button icon-before="article" size="medium"></ui-button>
+    <ui-button icon-before="article" height="30"></ui-button>
     <code>
-      <span>&lt;ui-button icon-before="article" size="medium"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-before="article"&gt;&lt;/ui-button&gt;</span>
     </code>
 
-    <ui-button icon-before="article" size="large"></ui-button>
+    <ui-button icon-before="article"></ui-button>
     <code>
-      <span>&lt;ui-button icon-before="article" size="large"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button icon-before="article"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
