--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -16,7 +16,9 @@
 <section class="content">
   <span>Горизонтальный разделитель.</span>
   <div class="example">
-    <ui-divider></ui-divider>
+    <div class="preview">
+      <ui-divider></ui-divider>
+    </div>
     <code>
       <span>&lt;ui-divider&gt;&lt;/ui-divider&gt;</span>
     </code>
@@ -24,17 +26,27 @@
 
   <span>Горизонтальный разделитель с текстом, выровненным: по центру, слева, справа.</span>
   <div class="example">
-    <ui-divider label="Текст"></ui-divider>
+    <div class="preview">
+      <ui-divider label="Текст"></ui-divider>
+    </div>
     <code>
       <span>&lt;ui-divider label="Текст"&gt;&lt;/ui-divider&gt;</span>
     </code>
+  </div>
 
-    <ui-divider label="Текст" align="left"></ui-divider>
+  <div class="example">
+    <div class="preview">
+      <ui-divider label="Текст" align="left"></ui-divider>
+    </div>
     <code>
       <span>&lt;ui-divider label="Текст" align="left"&gt;&lt;/ui-divider&gt;</span>
     </code>
+  </div>
 
-    <ui-divider label="Текст" align="right"></ui-divider>
+  <div class="example">
+    <div class="preview">
+      <ui-divider label="Текст" align="right"></ui-divider>
+    </div>
     <code>
       <span>&lt;ui-divider label="Текст" align="right"&gt;&lt;/ui-divider&gt;</span>
     </code>
@@ -42,7 +54,7 @@
 
   <span>Вертикальный разделитель. Высота 100%.</span>
   <div class="example">
-    <div style="height:100px;">
+    <div class="preview" style="height:100px;">
       <ui-divider axis="y"></ui-divider>
     </div>
     <code>
@@ -52,26 +64,29 @@
 
   <span>Вертикальный разделитель с текстом, выровненным: по центру, сверху, снизу.</span>
   <div class="example">
-    <div style="height:150px;">
+    <div class="preview" style="height:150px;">
       <ui-divider label="Текст" axis="y"></ui-divider>
     </div>
     <code>
       <span>&lt;ui-divider label="Текст" axis="y"&gt;&lt;/ui-divider&gt;</span>
     </code>
+  </div>
 
-    <div style="height:150px;">
+  <div class="example">
+    <div class="preview" style="height:150px;">
       <ui-divider label="Текст" axis="y" align="top"></ui-divider>
     </div>
     <code>
       <span>&lt;ui-divider label="Текст" axis="y" align="top"&gt;&lt;/ui-divider&gt;</span>
     </code>
+  </div>
 
-    <div style="height:150px;">
+  <div class="example">
+    <div class="preview" style="height:150px;">
       <ui-divider label="Текст" axis="y" align="bottom"></ui-divider>
     </div>
     <code>
       <span>&lt;ui-divider label="Текст" axis="y" align="bottom"&gt;&lt;/ui-divider&gt;</span>
     </code>
   </div>
-
 </section>
