--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -10,7 +10,9 @@
 <section class="content">
   <span>Иконка.</span>
   <div class="example">
-    <ui-icon icon="home"></ui-icon>
+    <div class="preview">
+      <ui-icon icon="home"></ui-icon>
+    </div>
     <code>
       <span>&lt;ui-icon icon="home"&gt;&lt;/ui-icon&gt;</span>
     </code>
