--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@ function loadContent(page){
 }
 </script>
 
-<script type="module" src="components/ui-icon.js"></script>
-<script type="module" src="components/ui-divider.js"></script>
-<script type="module" src="components/ui-text.js"></script>
-<script type="module" src="components/ui-button.js"></script>
-<script type="module" src="components/ui-input.js"></script>
+<script type="module" src="components/ui-components.js"></script>
 </body>
 </html>
