--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,10 +1,10 @@
 <section class="intro">
   <span class="title">Иконки</span>
   <span class="description">Коллекция иконок.</span>
-  <div class="info">
-    <span>Толщина линии до конвертации: 1.6px.</span>
-    <span>Закругление угла: 3px.</span>
-  </div>
+  <ul>
+    <li>Толщина линии до конвертации: 1.6px.</li>
+    <li>Закругление угла: 3px.</li>
+  </ul>
 </section>
 
 <section class="content">
