--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -1,16 +1,16 @@
 <section class="intro">
   <span class="title">Разделитель</span>
-  <span class="description">Разделение контента с помощью линии или линии с текстом.</span>
-  <div class="info">
-    <span>Все атрибуты статичные.</span>
-    <span>Горизонтальный разделитель имеет ширину 100%.</span>
-    <span>Вертикальный разделитель имеет высоту 100%.</span>
-    <span>label - не обазательный атрибут (тип строка), никаких ограничений.</span>
-    <span>axis - x или y (строчные), отвечает за направление. По умолчанию x.</span>
-    <span>align - расположение текста. По умолчанию по центру.</span>
-    <span>align - left или right работают только с axis="x".</span>
-    <span>align - top или bottom работают только с axis="y".</span>
-  </div>
+  <span class="description">Компонент для разделения контента с помощью линии или линии с текстом.</span>
+  <ul>
+    <li>Все атрибуты статичные.</li>
+    <li>Горизонтальный разделитель имеет ширину 100%.</li>
+    <li>Вертикальный разделитель имеет высоту 100%.</li>
+    <li>label - не обазательный атрибут (тип строка), никаких ограничений.</li>
+    <li>axis - x или y (строчные), отвечает за направление. По умолчанию x.</li>
+    <li>align - расположение текста. По умолчанию по центру.</li>
+    <li>align - left или right работают только с axis="x".</li>
+    <li>align - top или bottom работают только с axis="y".</li>
+  </ul>
 </section>
 
 <section class="content">
