--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -1,10 +1,10 @@
 <section class="intro">
   <span class="title">Иконка</span>
-  <span class="description">Компонент для вставки иконки.</span>
-  <div class="info">
-    <span>icon - реактивный и обязательный атрибут, может содержать буквы (латиница a-z A-Z) и цифры (0-9), начало с букв.</span>
-    <span>fill - currentColor, цвет svg зависит от цвета шрифта указанного в родительском элементе. </span>
-  </div>
+  <span class="description">Компонент для отображения иконки.</span>
+  <ul>
+    <li>icon - реактивный, обязательный атрибут, может содержать буквы (латиница a-z A-Z) и цифры (0-9), начало с букв.</li>
+    <li>fill - currentColor, цвет svg зависит от цвета шрифта указанного в родительском элементе.</li>
+  </ul>
 </section>
 
 <section class="content">
